--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@
 </head>
 <body>
     <div>Indah baru</div>
+    <div class="col">
+        <div class="container">
+            <div class="row">
+                
+            </div>
+        </div>
+    </div>
+    <div>
+        
+    </div>
 </body>
 </html>
